--- a/my-vite-project/index.html
+++ b/my-vite-project/index.html
@@ -85,6 +85,101 @@
       <button class="btn btn-success">SCOPRI DI PIÙ</button>
     </div>
   </div>
+  <div class="paragraf">
+    <p class="red">Scegli la categoria di corsi dalla quale vuoi iniziare</p>
+    <h1>Categorie Popolari</h1>
+  </div>
+  <div class="container d-flex justify-content-around">
+    <div class="icon-card-green">
+      <i class="fa-solid fa-pen-to-square icon-2"></i>CODING
+      <p>39 Corsi</p>
+    </div>
+    <div class="icon-card-grey">
+      <i class="fas fa-camera icon"></i>REALTA'
+      <p>39 Corsi</p>
+    </div>
+    <div class="icon-card-yellow">
+      <i class="fas fa-volume-up icon-3"></i>GIOIA
+      <p>24 Corsi</p>
+    </div>
+  </div>
+  <div class="container d-flex justify-content-around">
+    <div class="icon-card-yellow">
+      <i class="fas fa-volume-up icon-3"></i>SPEAKING
+      <p>24 Corsi</p>
+    </div>
+    <div class="icon-card-red">
+      <i class="fas fa-laptop icon-4"></i>MELA
+      <p>16 Corsi</p>
+    </div>
+    <div class="icon-card-green">
+      <i class="fa-solid fa-pen-to-square icon-2"></i>DISEGNO
+      <p>39 Corsi</p>
+    </div>
+  </div>
+  <div class="container d-flex justify-content-around">
+    <div class="icon-card-red">
+      <i class="fas fa-handshake icon-4"></i>CONFLITTI
+      <p>16 Corsi</p>
+    </div>
+    <div class="icon-card-yellow">
+      <i class="fas fa-dumbbell icon-3"></i>SCONOSCIUTO
+      <p>24 Corsi</p>
+    </div>
+    <div class="icon-card-grey">
+      <i class="fa-solid fa-pen-to-square icon"></i>FARFALLE
+      <p>39 Corsi</p>
+    </div>
+  </div>
+  <div class="paragraf-2">
+    <p class="red-2">Scegli la categoria di corsi dalla quale vuoi iniziare</p>
+    <h1 class=text-online>Esplora I Corsi Online</h1>
+  </div>
+  <div class="container d-flex justify-content-around">
+    <div class="stat-card">
+      <img class="online" src="/images/item1.jpg" alt="">
+      <h5>Artigianato</h5>
+      <p>Maghi del codice</p>
+    </div>
+    <div class="stat-card">
+      <img class="online" src="/images/item2.jpg" alt="">
+      <h5>Storia</h5>
+      <p>Corsi stravaganti</p>
+    </div>
+    <div class="stat-card">
+      <img class="online" src="/images/item3.jpg" alt="">
+      <h5>>Artigianato</h5>
+      <p>Una pacca sulla spalla</p>
+    </div>
+    <div class="stat-card">
+      <img class="online" src="/images/item4.jpg" alt="">
+      <h5>Coding</h5>
+      <p>Persone ci sono cascate</p>
+    </div>
+  </div>
+  <div class="container d-flex justify-content-around">
+    <div class="stat-card">
+      <img class="online" src="/images/item5.jpg" alt="">
+      <h5>Storia</h5>
+      <p>Maghi del codice</p>
+    </div>
+    <div class="stat-card">
+      <img class="online" src="/images/item6.jpg" alt="">
+      <h5>Coding</h5>
+      <p>Corsi stravaganti</p>
+    </div>
+    <div class="stat-card">
+      <img class="online" src="/images/item7.jpg" alt="">
+      <h5>Storia</h5>
+      <p>Una pacca sulla spalla</p>
+    </div>
+    <div class="stat-card">
+      <img class="online" src="/images/item8.jpg" alt="">
+      <h5>Storia</h5>
+      <p>Persone ci sono cascate</p>
+    </div>
+  
+  
 </section>
 
 <script>
@@ -92,11 +187,6 @@
     document.querySelector('.nav').classList.toggle('active');
   }
 </script>
-
-
-</html>
-
-
 
 
 
